# MultiLangRAG

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/multilangrag/: __init__.py  cli.py  config.py  documents.py  embeddings.py  rag.py  vectorstore.py
tests/: test_rag.py
