[project]
name = "multilangrag"
version = "0.1.0"
description = "Multilingual Retrieval-Augmented Generation system with cross-lingual embeddings"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "python-dotenv>=1.0.1",
    "rich>=13.0.0",
    "sentence-transformers>=5.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
multilangrag = "multilangrag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/multilangrag"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
